Update bootstrap.sh
GC参数添加